force-app/main/default/objects/Registration__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>