force-app/main/default/objects/Registration__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <label>Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anil Kumar</fullName>
            </value>
            <value>
                <fullName>Ram Pancharia</fullName>
            </value>
            <value>
                <fullName>Sharath Biz</fullName>
            </value>
            <value>
                <fullName>Kumar Sharath</fullName>
            </value>
            <value>
                <fullName>Sunil George</fullName>
            </value>
            <value>
                <fullName>SM Kumar</fullName>
            </value>
            <value>
                <fullName>Anil Manu</fullName>
            </value>
            <value>
                <fullName>P Kumar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>