force-app/main/default/objects/Registration__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Checkup</fullName>
            </value>
            <value>
                <fullName>Dental Cleaning</fullName>
            </value>
            <value>
                <fullName>Eye Examination</fullName>
            </value>
            <value>
                <fullName>Orthopedic Consultation</fullName>
            </value>
            <value>
                <fullName>Cardiology Screening</fullName>
            </value>
            <value>
                <fullName>Dermatology Consultation</fullName>
            </value>
            <value>
                <fullName>Physiotherapy Session</fullName>
            </value>
            <value>
                <fullName>Nutrition Counseling</fullName>
            </value>
            <value>
                <fullName>ENT Consultation</fullName>
            </value>
            <value>
                <fullName>Diabetes Management</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
            <value>
                <fullName>Surgery Follow-up</fullName>
            </value>
            <value>
                <fullName>Mental Health Counseling</fullName>
            </value>
            <value>
                <fullName>Pediatric Checkup</fullName>
            </value>
            <value>
                <fullName>Gynecology Consultation</fullName>
            </value>
            <value>
                <fullName>Cancer Screening</fullName>
            </value>
            <value>
                <fullName>Skin Allergy Test</fullName>
            </value>
            <value>
                <fullName>Asthma Management</fullName>
            </value>
            <value>
                <fullName>Hearing Test</fullName>
            </value>
            <value>
                <fullName>Blood Pressure Monitoring</fullName>
            </value>
            <value>
                <fullName>Heart Surgery</fullName>
            </value>
            <value>
                <fullName>Lung cancer</fullName>
            </value>
            <value>
                <fullName>Kidney transplant</fullName>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>