force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hospital_Number__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Executive__c</columns>
    <columns>Date__c</columns>
    <columns>Gender__c</columns>
    <columns>Amount__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>City__c</columns>
    <columns>District__c</columns>
    <columns>Email__c</columns>
    <columns>Enquiry__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Treatment__c</columns>
    <columns>Doctor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>